hphp/hack/test/typecheck/array_sub2.php.exp
File "array_sub2.php", line 12, characters 23-38:
Some type constraint(s) here are violated (Typing[4323])
  File "hackarray.hhi", line 23, characters 28-29:
  `Tk` is a constrained type parameter
  File "hackarray.hhi", line 23, characters 34-41:
  Expected `arraykey`
  File "array_sub2.php", line 12, characters 30-33:
  But got `bool`
File "array_sub2.php", line 21, characters 12-13:
Invalid argument (Typing[4110])
  File "array_sub2.php", line 12, characters 23-38:
  Expected `dict<bool, [unresolved]>`
  File "array_sub2.php", line 20, characters 15-25:
  But got `vec<int>`
